--- a/box-model.html
+++ b/box-model.html
@@ -511,9 +511,13 @@
         <h2>Centrado de Cajas</h2>
 
         <p>La manera de centrar una caja o elemento HTML (no su contenido) es darle un valor
-            "auto" a ambos margenes laterales, tanto a margin-right como a margin-left.
+            "auto" al margin-left y al margin-right.
         </p>
-        <p>El valor "auto" significa, ajustalo automaticamente.</p>
+        <p>El valor "auto" significa, ajustalo automaticamente, por ejemplo:</p>
+        <p>
+            <code>.sitio-web{ <br> margin-left: auto; <br> margin-right: auto; <br> }
+            </code>
+        </p>
 
         <h4>Ejemplos:</h4>
         <article class="sitio-web">
