--- a/index.html
+++ b/index.html
@@ -123,15 +123,28 @@
             </ol>
 
             <li>
-                <a href="positions-examples.html">Ejercicios practicos de
-                    posicionamiento en css</a>
+                <a href="positions-examples.html#inicio-ejercicios-practicos">Ejercicios
+                    practicos de posicionamiento en css</a>
             </li>
             <ol type="a">
                 <li>
-                    <a href="positions-examples.html#cabecera-fixed-vs-sticky">Cabecera fixed Vs Cabecera sticky</a>
+                    <a href="positions-examples.html#cabecera-fixed-vs-sticky">Cabecera fija
+                        (fixed) Vs Cabecera pegajosa (sticky)</a>
                 </li>
+                <li>
+                    <a href="positions-examples.html#efecto-slides-position-sticky">Efecto de slides con position
+                        sticky</a>
+                </li>
+                <li>
+                    <a href="positions-examples.html#ventana-modal">Ventana Modal / Menú Móvil con posicionamiento
+                        fixed</a>
+                </li>
+
             </ol>
 
+            <li>
+                <a href="index.html#margenes-negativos">Márgenes negativos</a>
+            </li>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
@@ -756,6 +769,30 @@
             <a href="https://caniuse.com/" target="_blank">Can i use</a>
         </p>
 
+        <a href="index.html#inicio" class="volver-inicio">🔼 Inicio</a>
+        <hr>
+    </article>
+
+    <article id="margenes-negativos">
+        <h2>Márgenes negativos</h2>
+        <p>Dentro del modelo de caja podemos aplicar valores negativos para los margenes
+            porque los margenes son distancias externas, entonces al aplicar un margen
+            negativo el elemento se movera hacia el lado sentido contrario.
+        </p>
+        <p>
+            Lo que no se puede aplicar padding negativo porque esta es la distancia que hay
+            entre el content box y el border.
+        </p>
+
+        <h3>Ejemplos:</h3>
+
+        <div class="box">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur omnis optio
+            nihil at odit ab quia minima, eaque ullam excepturi sapiente nobis placeat
+            ducimus error impedit tempora consectetur quod explicabo.
+        </div>
+
+        <br>
         <a href="index.html#inicio" class="volver-inicio">🔼 Inicio</a>
         <hr>
     </article>
