--- a/positions-examples.html
+++ b/positions-examples.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicios de posicionamiento CSS</title>
     <link rel="stylesheet" href="css/positions-examples.css">
 
     <style>
@@ -26,7 +26,14 @@
 
         <ol type="a">
             <li>
-                <a href="positions-examples.html#cabecera-fixed-vs-sticky">Cabecera fixed Vs Cabecera sticky</a>
+                <a href="positions-examples.html#cabecera-fixed-vs-sticky">Cabecera fija (fixed) Vs Cabecera pegajosa
+                    (sticky)</a>
+            </li>
+            <li>
+                <a href="positions-examples.html#efecto-slides-position-sticky">Efecto de slides con position sticky</a>
+            </li>
+            <li>
+                <a href="positions-examples.html#ventana-modal">Ventana Modal / Menú Móvil con posicionamiento fixed</a>
             </li>
         </ol>
 
@@ -36,10 +43,295 @@
     </article>
 
     <article id="cabecera-fixed-vs-sticky">
-        <h3>Cabecera fixed Vs Cabecera sticky</h3>
+        <h2>Cabecera fija (fixed) Vs Cabecera pegajosa (sticky)</h2>
+
+        <p>
+            Cuando vayamos a posicionar una cabecera es mejor hacerlo con <code><b>postion 
+            stick</b></code> que con <code><b>postion fixed</b></code>
+        </p>
+
+        <h3>Ejemplos:</h3>
+
+        <div class="hero-images"></div>
+        <header class="header sticky-top">
+            <div>Conenido de la cabecera</div>
+        </header>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="positions-examples.html#inicio-ejercicios-practicos" class="volver-inicio">🔼 Ir a inicio ejercicios
+            practicos de posicionamiento en css</a>
+        <hr>
+    </article>
+
+    <article id="efecto-slides-position-sticky">
+        <h2>Efecto de slides con position sticky</h2>
 
 
+        <h3>Ejemplos:</h3>
 
+        <section class="slides">
+            <article class="slide">
+                <h3 class="slide-title">Titulo de la sección</h3>
+                <div class="slide-content">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                </div>
+            </article>
+
+            <article class="slide">
+                <h3 class="slide-title">Titulo de la sección</h3>
+                <div class="slide-content">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                </div>
+            </article>
+
+            <article class="slide">
+                <h3 class="slide-title">Titulo de la sección</h3>
+                <div class="slide-content">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                </div>
+            </article>
+
+            <article class="slide">
+                <h3 class="slide-title">Titulo de la sección</h3>
+                <div class="slide-content">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse dicta
+                        aut obcaecati consectetur dolore alias eum, facere est doloremque!
+                        Distinctio dignissimos molestias cum rerum aspernatur corrupti
+                        reiciendis id esse.
+                    </p>
+                </div>
+            </article>
+        </section>
+
+
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="positions-examples.html#inicio-ejercicios-practicos" class="volver-inicio">🔼 Ir a inicio ejercicios
+            practicos de posicionamiento en css</a>
+        <hr>
+    </article>
+
+    <article id="ventana-modal">
+        <h2>Ventana Modal / Menú Móvil con posicionamiento fixed</h2>
+
+
+        <h3>Ejemplos:</h3>
+
+        <article id="modal-1" class="modal-window">
+            <h3 class="modal-title">Ventana modal</h3>
+            <div class="modal-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi itaque
+                    voluptas sequi eius molestiae quaerat quis sit animi in, eveniet odio
+                    expedita fugiat ipsum delectus, quasi vero officiis temporibus totam.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi itaque
+                    voluptas sequi eius molestiae quaerat quis sit animi in, eveniet odio
+                    expedita fugiat ipsum delectus, quasi vero officiis temporibus totam.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi itaque
+                    voluptas sequi eius molestiae quaerat quis sit animi in, eveniet odio
+                    expedita fugiat ipsum delectus, quasi vero officiis temporibus totam.
+                </p>
+            </div>
+            <a href="#cerrar" class="modal-quit">Cerrar modal</a>
+        </article>
+        <a href="#modal-1" class="modal-link">Abrir modal</a>
+
+        <br>
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
         <a href="positions-examples.html#inicio-ejercicios-practicos" class="volver-inicio">🔼 Ir a inicio ejercicios
