--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
                 <a href="index.html#margenes-negativos">Márgenes negativos</a>
             </li>
 
+            <li>
+                <a href="colors.html#inicio-colores-css">Colores en CSS</a>
+            </li>
+            <ol type="a">
+                <li><a href="colors.html#colores-css">Colores en CSS</a></li>
+                <li><a href="colors.html#colores-por-nombre">Colores por nombre</a></li>
+                <li><a href="colors.html#sistema-hexadecimal">Sistema Hexadecimal</a></li>
+
+
+            </ol>
+
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
         <hr>
