--- a/pseudoclasesLinkVisitedHoverActive.html
+++ b/pseudoclasesLinkVisitedHoverActive.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseudoclases</title>
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
 
     <style>
+        /*La propiedad scroll-behavior con el valor smooth permite generar una animacion de movimiento en la pantalla (de scroll) al dar click en un enlace del temario la pantalla se mueve el tema correspondiente */
+        html {
+            scroll-behavior: smooth;
+        }
+
         a:link {
             color: blue;
         }
