--- a/index.html
+++ b/index.html
@@ -152,7 +152,17 @@
             <ol type="a">
                 <li><a href="colors.html#colores-css">Colores en CSS</a></li>
                 <li><a href="colors.html#colores-por-nombre">Colores por nombre</a></li>
-                <li><a href="colors.html#sistema-hexadecimal">Sistema Hexadecimal</a></li>
+                <li><a href="colors.html#sistema-hexadecimal">Sistema de colores Hexadecimal</a></li>
+                <li>
+                    <a href="colors.html#sistema-rgb">Sistema de colores RGB (Red, Green, Blue)</a>
+                </li>
+                <li>
+                    <a href="colors.html#sistema-hsl">Sistema de colores HSL (Tono, saturacion, Luminocidad)</a>
+                </li>
+                <li>
+                    <a href="colors.html#transparent-currentcolor">Transparent & currentColor</a>
+                </li>
+                <li><a href="colors.html#propiedad-opacity">Propiedad opacity</a></li>
 
 
             </ol>
