--- a/units.html
+++ b/units.html
@@ -26,7 +26,8 @@
             <li><a href="units.html#introduccion-unidades-medida">Introduccion</a></li>
             <li><a href="units.html#pixels">Pixeles</a></li>
             <li><a href="units.html#ems">Unidades EMs</a></li>
-            <li><a href="units.html#rems ">Unidades REMs</a></li>
+            <li><a href="units.html#rems ">Unidades REMs (Root em)</a></li>
+            <li><a href="units.html#exs">Unidades EXs</a></li>
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
@@ -184,11 +185,54 @@
     </article>
 
     <article id="rems">
-        <h2>Unidades REMs</h2>
+        <h2>Unidades REMs (Root em)</h2>
+        <p>
+            La unidad rem siempre va a estar basada en el tamaño de letra que tenga el
+            elemento raiz del documento que es la etiqueta HTML cuyo tamaño por defecto es
+            16px.
+        </p>
+        <p>
+            Cuando hablamos de unidades rem simplemente tenemos que ver el tamño de letra
+            que tiene asignado la etiqueta (roo raiz) HTML que por defecto es de 16px.
+        </p>
+
+        <h3>Ejemplos:</h3>
+        <div class="rems">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, ex minus?
+            Eveniet magnam rerum vero cum? Voluptates doloribus eligendi modi ad nulla
+            corrupti atque saepe! Dolores sapiente explicabo possimus perferendis.
+            <section class="rem-child">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+                repellendus blanditiis cupiditate adipisci, commodi eveniet alias repellat
+                delectus, totam excepturi, nemo deleniti! Provident est debitis consequatur
+                vero sit, quis tempora!
+            </section>
+        </div>
+
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="units.html#inicio-unidades-medida" class="volver-inicio">🔼 Ir a inicio unidades de medida</a>
+        <hr>
+    </article>
+
+    <article id="exs">
+        <h2>Unidades EXs</h2>
+
+
 
 
         <h3>Ejemplos:</h3>
-
+        <div class="exs">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, ex minus?
+            Eveniet magnam rerum vero cum? Voluptates doloribus eligendi modi ad nulla
+            corrupti atque saepe! Dolores sapiente explicabo possimus perferendis.
+            <section class="exs-child">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+                repellendus blanditiis cupiditate adipisci, commodi eveniet alias repellat
+                delectus, totam excepturi, nemo deleniti! Provident est debitis consequatur
+                vero sit, quis tempora!
+            </section>
+        </div>
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
