--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@
                 <li><a href="units.html#introduccion-unidades-medida">Introduccion</a></li>
                 <li><a href="units.html#pixels">Pixeles</a></li>
                 <li><a href="units.html#ems">Unidades EMs</a></li>
-                <li><a href="units.html#rems ">Unidades REMs</a></li>
+                <li><a href="units.html#rems ">Unidades REMs (Root em)</a></li>
+                <li><a href="units.html#exs">Unidades EXs</a></li>
             </ol>
+
 
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
