--- a/units.html
+++ b/units.html
@@ -28,6 +28,7 @@
             <li><a href="units.html#ems">Unidades EMs</a></li>
             <li><a href="units.html#rems ">Unidades REMs (Root em)</a></li>
             <li><a href="units.html#exs">Unidades EXs</a></li>
+            <li><a href="units.html#chs">Unidades CHs</a></li>
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
@@ -146,8 +147,9 @@
     <article id="ems">
         <h2>Unidades EMs</h2>
         <p>
-            Los <b>em</b> son unidades de medida que estan basadas en el tamaño tipografico,
-            es decir en el tamaño de la fuente.
+            Los <b>em</b> son unidades de medida que estan basadas en el ancho de la letra
+            m, porque esta letra es la más ancha del alfabeto hablando tipograficamente de
+            la fuente del elemento.
         </p>
         <p>
             Cuando se utilicen <b>ems</b> hay que tener en cuenta que tamaño de fuente
@@ -217,9 +219,13 @@
 
     <article id="exs">
         <h2>Unidades EXs</h2>
-
-
-
+        <p>
+            Los <b>exs</b> estan basadosen la altura de la letra X, que es la letra mas alta
+            del alfabeto hablando tipograficamente. <br>
+            los <b>exs</b> tambien toman de la unidad de medida del elemento padre
+            contenedor.
+        </p>
+        <p>En la practica los exs no se utilizan mucho.</p>
 
         <h3>Ejemplos:</h3>
         <div class="exs">
@@ -240,6 +246,28 @@
         <hr>
     </article>
 
+    <article id="chs">
+        <h2>Unidades CHs</h2>
+
+        <p>Los <b>ch</b> esan basados en la anchura del cero de la fuente del elemento</p>
+
+        <h3>Ejemplos:</h3>
+        <div class="chs">
+            1234567890
+        </div>
+        <div class="chs">
+            qwertyasdfg
+        </div>
+        </div>
+        <div class="chs">
+            12we.,6y{}7
+        </div>
+
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="units.html#inicio-unidades-medida" class="volver-inicio">🔼 Ir a inicio unidades de medida</a>
+        <hr>
+    </article>
 </body>
 
 </html>
